--- a/index.html
+++ b/index.html
@@ -1845,7 +1845,7 @@
               <p class="mb-4">
                 <span class="icon-room d-block h4 text-primary"></span>
                 <span
-                  >Rua do Algueiro, 105 <br />
+                  >Rua do Agueiro, 105 <br />
                   4500-506 Paramos</span
                 >
               </p>
@@ -1881,7 +1881,7 @@
           <div class="row" data-aos="fade-up" data-aos-delay="100">
             <iframe
               class="map"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.8524251220906!2d-8.632019384331677!3d40.96281163016978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247870d60aa793%3A0xc0db88213bb1d88!2sR.%20do%20Agueiro%20105%2C%203885-516%20Esmoriz!5e0!3m2!1sen!2spt!4v1602091114351!5m2!1sen!2spt"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12050.541622628925!2d-8.6295711!3d40.9675653!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x60a7dbb13cf4e170!2sBeatriz%20dos%20Panos!5e0!3m2!1sen!2spt!4v1618911783676!5m2!1sen!2spt"
               width="800"
               height="600"
               frameborder="0"
