--- a/index.html
+++ b/index.html
@@ -1820,6 +1820,19 @@
                 <img class="img-fluid" src="/assets/images/casper2.jpg" />
               </a>
             </div>
+            <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/santos_monteiro.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img
+                  class="img-fluid"
+                  src="/assets/images/santos_monteiro.jpg"
+                />
+              </a>
+            </div>
           </div>
         </div>
       </section>
